# readable

./: .all-contributorsrc  .gitattributes  .gitignore  README.md  REFACTOR_PLAN.md  REUSE.toml  _typos.toml  mise.toml  plainr.py  pyproject.toml  ruff.toml
.exportify/: .gitignore  config.yaml
.github/workflows/: ci.yml  release.yml
.serena/: .gitignore  project.yml
LICENSES/: Apache-2.0.txt  LicenseRef-PlainMIT.md  MIT.md
archive/readability/scorers/: ari.py  coleman_liau.py  dale_chall.py  flesch.py  flesch_kincaid.py  gunning_fog.py  linsear_write.py  smog.py  spache.py
claudedocs/: api-reference-assessment.md  doc-framework.md  readme-review.md
claudedocs/research/: metrics-A-flesch-fk-smog.md  metrics-B-ari-coleman-fog.md  metrics-C-dale-chall-spache-linsear.md
docs-site/: .gitignore  README.md  astro.config.mjs  package.json  tsconfig.json  wrangler.jsonc
docs-site/patches/: apply.mjs
docs-site/src/: content.config.ts
docs-site/src/content/docs/: choosing-a-metric.md  index.mdx
docs-site/src/content/docs/guides/: extending.md
docs-site/src/content/docs/metrics/: ari.md  coleman-liau.md  dale-chall.md  flesch-kincaid.md  flesch.md  gunning-fog.md  index.md  linsear-write.md  smog.md  spache.md
docs-site/src/content/docs/reference/: example.md
docs-site/src/styles/: custom.css
examples/: __init__.py  basic_usage.py  custom_metric.py
readable/: __about__.py  __init__.py
readable/_constants/: about_metric.py
readable/metrics/: ari.py  flesch.py  flesch_kincaid.py  smog.py
readable/resources/: __init__.py  loader.py
readable/text/: analyzer.py  statistics.py
readable/types/: __init__.py  _interfaces.py  enums.py
src/readable/: __about__.py  __init__.py  readability.py
src/readable/constants/: about_metric.py
src/readable/metrics/: __init__.py  ari.py  coleman_liau.py  dale_chall.py  flesch.py  flesch_kincaid.py  gunning_fog.py  linsear_write.py  smog.py  spache.py
src/readable/resources/: __init__.py  stemmer.py
src/readable/text/: __init__.py  analyzer.py  statistics.py  syllables.py  tokenizer.py
src/readable/types/: __init__.py  _interfaces.py  enums.py  results.py
src/readscore/: __init__.py  readability.py
src/readscore/metrics/: __init__.py  ari.py  coleman_liau.py  dale_chall.py  flesch.py  flesch_kincaid.py  gunning_fog.py  linsear_write.py  smog.py  spache.py
src/readscore/resources/: __init__.py  loader.py  stemmer.py
src/readscore/resources/data/: dale_chall_porterstem.txt.license
src/readscore/resources/nltk_data/tokenizers/punkt_tab/english/: ortho_context.tab
src/readscore/text/: __init__.py  analyzer.py  statistics.py  syllables.py
src/readscore/types/: __init__.py  _interfaces.py  enums.py  results.py
test/: test_enums.py  test_readability.py
tests/: __init__.py  test_enums.py  test_readability.py
