[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "readable"
dynamic = ["version"]
authors = [
    { name = "Knitli Inc.", email = "hello@knit.li" }
]
description = "Modernized readability scoring for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.3",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/plainlicense/readable"
Issues = "https://github.com/plainlicense/readable/issues"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["readable"]

[tool.uv]
managed = true
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.13",
    "ty>=0.0.1",
    "uv-dynamic-versioning>=0.1.0",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "typings",
  "tests/fixtures/malformed.py",
]
extend-include = ["*.ipynb"]
fix = true
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
line-ending = "auto"
indent-style = "space"
skip-magic-trailing-comma = true
exclude = [
  "**/_vendor",
  "setuptools/_distutils",
  "setuptools/config/_validate_pyproject",
  ".venv",
  ".git",
  ".github",
  ".vscode",
  ".idea",
  "dist",
  "build",
  "site",
  "bin",
  "lib",
  "include",
  "docs",
]
# Enable preview, required for quote-style = "preserve"
preview = true
# https://docs.astral.sh/ruff/settings/#format-quote-style
quote-style = "double"

[tool.ruff.lint]
fixable = ["ALL"]
# Almost all rules; but not all https://docs.astral.sh/ruff/rules/
select = [
  "A",
  "ASYNC",
  "B",
  "C",
  "D",
  "E",
  "F",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INT",
  "N",
  "LOG",
  "PD",
  "PERF",
  "PIE",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RSE",
  "RET",
  "S",
  "SLF",
  "SLOT",
  "SIM",
  "TRY",
  "RUF",
  "UP",
  "YTT",
  "W",
]
extend-select = [
  "A003",
  "ANN201",
  "ANN002",
  "COM818",
  "C901",
  "DTZ005",
  "DTZ007",
  "FBT001",
  "ISC003",
  "TID252",
  "TID253",
]
ignore = [
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E402",
  "E111",
  "E114",
  "E117",
  "D200",
  "D205",
  "D206",
  "D300",
  "D417",
  "E501",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "PYI051",  # redundant annotation with Literal and str -- we like to be explicit here
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
  "D212",
  "SLF001",  # Private member accessed... it's not private for us.
  "TRY003",
  "UP015",  # redundant-open-modes, explicit is preferred
]
exclude = [
  ".venv/",
  "**/_vendor",
  "setuptools/_distutils",
  "setuptools/config/_validate_pyproject",
  "typings",
  "tests/fixtures/malformed.py",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules for certain files
"**/validation/**/*.py" = [
  "S110",  # try-except-pass
  "TRY301",  # abstract raise to an inner function
  "S101",  # allow assert
  "SLF001",  # Private member accessed
  "D100",  # missing docstring in public module
  "D102",  # missing docstring in public class
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public method
  "D105",  # missing docstring in magic method
  "D107",  # missing docstring in __init__
  "G004",  # f-string in logging statement
  "N806",  # incorrect case for function name
]
"test/*.py" = [
  "ANN",
  "C901",  # too complex
  "D",
  "DTZ",
  "FBT001",  # boolean typed positional argument
  "G004",  # f-string in logging statement
  "N806",  # incorrect case for function name
  "PT012",  # pytest.raises() block should contain a single simple statement
  "PT017",  # Found assertion on exception in except block
  "PT018",  # Assertion should be broken down into multiple parts
  "PT011",  # pytest.raises() too broad
  "B017",  # Do not assert blind exception
  "PTH",
  "S",
  "SIM",
  "SLF001",  # Private member accessed
  "PYI024",  # Use typing.NamedTuple instead of collections.namedtuple
]
"scripts/**/*.py" = [
  "ANN",
  "C901",  # too complex
  "D",
  "DTZ",
  "N806",  # incorrect case for function name
  "S108",  # Probable insecure usage of temporary file or directory
  "TRY300",  # Consider moving this statement to an else block
  "RUF001",  # String contains ambiguous characters
]

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = false
lines-after-imports = 2
lines-between-types = 1
split-on-trailing-comma = false
