[project]
name = "readable"
description = "Modernized readability scoring for Python"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Knitli Inc.", email = "hello@knit.li" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "nltk>=3.9.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/plainlicense/readable"
Issues = "https://github.com/plainlicense/readable/issues"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.11.13",
  "ty>=0.0.1",
  "uv-dynamic-versioning>=0.1.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
package = true
